<resources>
    <string name="app_name">My Trivia App</string>
    <string name="title">Trivia</string>
    <string name="true_title">True</string>
    <string name="false_btn">False</string>
    <string name="true_btn">True</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="string_previous_button">previous_button</string>
    <string name="counter_questions">0 / 100</string>
    <string name="question_text_view">TextView</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="inner_text" />
    <string name="high_score">High Score:</string>
    <string name="high_score_value">0</string>
    <string name="current_score">Current Score:</string>
    <string name="current_score_value">0</string>
</resources>