<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_turquoise"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/marcellus"
        android:letterSpacing="0.2"
        android:text="@string/title"
        android:textColor="@color/bottle_green"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="7dp"
        app:contentPaddingBottom="20dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inner_text"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"

            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/turquoise"
        android:fontFamily="@font/marcellus"
        android:text="@string/true_btn"
        android:textColor="@color/bottle_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/false_button"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toEndOf="@+id/prev_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/turquoise"
        android:fontFamily="@font/marcellus"
        android:text="@string/false_btn"
        android:textStyle="bold"
        android:textColor="@color/bottle_green"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/bottle_green"
        android:contentDescription="@string/string_previous_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/bottle_green"
        android:contentDescription="@string/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_next" />

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/marcellus"
        android:text="@string/counter_questions"
        android:textColor="@color/bottle_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.507" />

</androidx.constraintlayout.widget.ConstraintLayout>